# Akshat-AI-System

./: .gitignore  2_collide.py  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  core_catalog.json  generated_framework_report.md  ontology_map.json  pyproject.toml  requirements.txt  run_tests.py  sample_macro_event.json  sector_map.json  test_results.md
.automation_state/: extraction_state.json  master_hash.json
automation/: config_loader.py  contradiction_checker.py  extract_principles.py  fetch_youtube_transcripts.py  generate_changelog_entry.py  requirements.txt  run_update_protocol.py  update_frequency_table.py  update_recent_changes.py
changelog/: SESSION_TEMPLATE.md
docs/: ai_query_interface.md  akshat_stock_logic_analysis.md  architecture_overview.md  architecture_validation_simulation.md  ddd-decision-log.md  dynamic_stock_implementation_plan.md  dynamic_stock_selection_design.md  dynamic_stock_selection_implementation_plan.md  dynamic_stock_selection_mvp_design.md  edge_case_library.md  emerging_framework_detection_engine.md  emerging_framework_stress_test.md  end_to_end_execution_walkthrough.md  evidence_coverage_audit.md  evidence_gap_matrix.md  final_roadmap_verdict.md  final_verdict_and_self_audit.md  framework_layer_audit.md  framework_validation_lab.md  goal_drift_analysis.md  historical_validation_lab.md  how_to_add_source.md  implementation_blockers.md  implementation_go_no_go_report.md  macro_collision_engine_architecture.md  mvp_attack_scenarios.md  mvp_build_blueprint.md  mvp_implementation_freeze.md  mvp_implementation_plan.md  (+43 more)
(+88 files in other folders)
